--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=UltraStore;Trusted_Connection=True;TrustServerCertificate=True;"
-
+  },
+  "Smtp": {
+    "Server": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "nguyenhuythien9a1@gmail.com",
+    "Password": "psezvpsaugwqgwcf"
+  },
+  "ReCaptcha": {
+    "SiteKey": "6LdMzlEqAAAAAIRD7o-nvN9bH3jPvKLaKaGW8xD4",
+    "SecretKey": "6LdMzlEqAAAAADE1kT5hDVgT95WXbetEGm_4KHP8"
   },
   "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false"
 }
