--- a/appsettings.json
+++ b/appsettings.json
@@ -1,16 +1,4 @@
 {
-  "Jwt": {
-    "Key": "your_secret_key_must_be_longer_than_16_characters",
-    "Issuer": "UltraStrore",
-    "Audience": "UltraStroreClient",
-    "ExpiryInMinutes": 60
-  },
-  "EmailSettings": {
-    "SmtpServer": "smtp.gmail.com",
-    "SmtpPort": 587,
-    "SenderEmail": "sthe06714@gmail.com",
-    "SenderPassword": "ezos qjgi xwet ulvt"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -19,8 +7,17 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=C6;Trusted_Connection=True;TrustServerCertificate=True;"
-
+    "DefaultConnection": "Server=.;Database=UltraStore;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Smtp": {
+    "Server": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "nguyenhuythien9a1@gmail.com",
+    "Password": "psezvpsaugwqgwcf"
+  },
+  "ReCaptcha": {
+    "SiteKey": "6LdMzlEqAAAAAIRD7o-nvN9bH3jPvKLaKaGW8xD4",
+    "SecretKey": "6LdMzlEqAAAAADE1kT5hDVgT95WXbetEGm_4KHP8"
   },
   "DOTNET_SYSTEM_GLOBALIZATION_INVARIANT": "false"
 }
