--- a/appsettings.json
+++ b/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "your_secret_key_must_be_longer_than_16_characters",
+    "Issuer": "UltraStrore",
+    "Audience": "UltraStroreClient",
+    "ExpiryInMinutes": 60
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=UltraStore;Trusted_Connection=True;TrustServerCertificate=True;"
@@ -14,6 +20,12 @@
     "Port": "587",
     "Username": "nguyenhuythien9a1@gmail.com",
     "Password": "psezvpsaugwqgwcf"
+  },
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "SmtpPort": 587,
+    "SenderEmail": "sthe06714@gmail.com",
+    "SenderPassword": "ezos qjgi xwet ulvt"
   },
   "ReCaptcha": {
     "SiteKey": "6LdMzlEqAAAAAIRD7o-nvN9bH3jPvKLaKaGW8xD4",
